refactor(sitemesh): adopt Java 17 idioms (low-risk mechanical changes)
- pattern matching for instanceof in InMemoryContentChunk, CustomTag, Xml
- toArray(T[]::new) instead of toArray(new T[size]) in builders
- Set.of(...) instead of Collections.unmodifiableSet(new HashSet<>{...})
- String.formatted() instead of String.format(...)
- switch expression in TagTokenizerTest.typeAsString